@@ -1,3 +1,8 @@
+2013-05-21  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/model/action_sequence_log_parser.cpp:
+	- 行動列のデバッグ出力フォーマット変更に対応
+
 2013-05-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/qt4/action_sequence_selector.cpp:
